--- a/Foundation/sv/achievements.release.json
+++ b/Foundation/sv/achievements.release.json
@@ -40,8 +40,8 @@
 		"ACH_ALL_TAXES_DESC": "Inför alla sju skatter",
 		"ACH_TAXE_MONTHLY_5000_NAME@2025-01-14 22:58:01": "Finansministerns uttag",
 		"ACH_TAXE_MONTHLY_5000_DESC@2025-01-14 22:58:01": "Samla 5,000 skattemynt på en enda månad",
-		"ACH_PRODUCE_TAVERN_MEAL_NAME@2025-01-14 22:58:01": "Festmåltiden Boar's Head",
-		"ACH_PRODUCE_TAVERN_MEAL_DESC": "Producera en krogmåltid",
+		"ACH_PRODUCE_TAVERN_MEAL_NAME@2025-01-14 22:58:01": "Festmåltiden Vildsvinshuvud",
+		"ACH_PRODUCE_TAVERN_MEAL_DESC": "Producera en värdshusmåltid",
 		"ACH_VILLAGER_HAPPINESS_150_NAME@~2024-12-17 01:03:01": "Glad som en lärka",
 		"ACH_VILLAGER_HAPPINESS_150_DESC@~2024-12-19 20:57:14": "Ha en Invånare med 150% Glädje",
 		"ACH_GREAT_HALL_SPLENDOR_100_NAME": "Den stora osten av Cheddarpalatset",
