--- a/Foundation/sv/buildings.release.json
+++ b/Foundation/sv/buildings.release.json
@@ -8,9 +8,9 @@
 	"BUILDINGS": {
 		"LEGACY_RUSTIC_CHURCH": "Legacy Rustik kyrka",
 		"ROMAN_CHURCH": "Romansk kyrka",
-		"PROVISIONER_BERRY_CHEESE@2025-01-14 23:01:25": "Laga mat med Berry & Milk",
-		"PROVISIONER_BERRY_MEAT@2025-01-14 23:01:25": "Laga mat med Berry & Boar",
-		"PROVISIONER_BERRY_BREAD@2025-01-14 23:01:25": "Laga mat med Berry & Wheat",
+		"PROVISIONER_BERRY_CHEESE@2025-01-14 23:01:25": "Laga mat med bär och mjölk",
+		"PROVISIONER_BERRY_MEAT@2025-01-14 23:01:25": "Laga mat med bär och vildsvin",
+		"PROVISIONER_BERRY_BREAD@2025-01-14 23:01:25": "Laga mat med bär och vete",
 		"PROVISIONER_FISH_CHEESE@2025-01-14 23:01:25": "Laga mat med fisk & mjölk",
 		"PROVISIONER_FISH_MEAT@2025-01-14 23:01:25": "Laga mat med fisk & vildsvin",
 		"PROVISIONER_FISH_BREAD@2025-01-14 23:01:25": "Laga mat med fisk & vete",
@@ -43,7 +43,7 @@
 		"STONE_BRIDGE_ARK_PART": "Sten Rampart",
 		"STONE_BRIDGE_MACHICOLATION_PART": "Machikolering",
 		"STONE_BRIDGE_TOWER_PART": "Sten torn, mindre",
-		"STONE_BRIDGE_BIG_TOWER_PART": "Sten torn, Major",
+		"STONE_BRIDGE_BIG_TOWER_PART": "Sten torn, större",
 		"BRATTICE": "Gitter av trä",
 		"BRATTICE_STONE": "Stengaller",
 		"SMALL_WINDOW_CLOSED": "Litet fönster, stängt",
@@ -61,8 +61,8 @@
 		"MODEST_CLOISTER_A": "Modest Cloister, gångväg",
 		"MODEST_CLOISTER_CORNER_A": "Modest Cloister, hörnet",
 		"MODEST_CLOISTER_DOOR_A": "Modest Cloister, Entré",
-		"ABBEY_A": "Stensal, stor",
-		"ABBEY_B": "Stone Hall, mindre",
+		"ABBEY_A": "Stensal, större",
+		"ABBEY_B": "Stenhall, mindre",
 		"TRAINING_DUMMY": "Träningsdocka",
 		"INN_DOOR_A@~2024-12-17 16:34:48": "Välkomnande entré",
 		"INN_DOOR_B@~2024-12-17 16:30:13": "Rustik entré till värdshuset",
@@ -75,21 +75,21 @@
 		"INN_SIGN": "Skylt för värdshus",
 		"SERVICE_COUNTER": "Servicedisk",
 		"PUBLIC_LOUNGE": "Allmän lounge",
-		"MONASTERY_STONE_DOOR_A": "Stone Gate, Minor",
-		"MONASTERY_STONE_DOOR_B": "Stenport, Major",
+		"MONASTERY_STONE_DOOR_A": "Stenport, mindre",
+		"MONASTERY_STONE_DOOR_B": "Stenport, större",
 		"MONASTERY_STONE_DOOR_C": "Stone Gate, Service",
 		"MONASTERY_STONE_TOWER_A": "Stentorn, mindre",
 		"MONASTERY_STONE_TOWER_B": "Stenvalv",
-		"MONSATERY_STONE_EXTENSION_A": "Stengalleriet, Major",
-		"MONSATERY_STONE_EXTENSION_B": "Stengalleriet, Minor",
+		"MONSATERY_STONE_EXTENSION_A": "Stengalleri, större",
+		"MONSATERY_STONE_EXTENSION_B": "Stengalleri, mindre",
 		"MONSATERY_STONE_EXTENSION_D": "Stenkvarter",
 		"MONASTERY_RUSTIC_ROOM_A": "Rustik hall",
 		"MONASTERY_RUSTIC_ROOM_B": "Rustik passage",
 		"MONASTERY_RUSTIC_ROOM_C": "Rustik stuga, trä",
 		"MONASTERY_RUSTIC_ROOM_D": "Rustikt galleri",
-		"MONASTERY_RUSTIC_ROOM_E": "Rustikt rum, stort",
+		"MONASTERY_RUSTIC_ROOM_E": "Rustikt rum, större",
 		"MONASTERY_RUSTIC_ROOM_F": "Rustik stuga, sten",
-		"MONASTERY_RUSTIC_ROOM_G": "Rustikt rum, litet",
+		"MONASTERY_RUSTIC_ROOM_G": "Rustikt rum, mindre",
 		"MONASTERY_RUSTIC_TOWER_A": "Rustikt klocktorn, öppen klockstapel",
 		"MONASTERY_RUSTIC_TOWER_B": "Rustikt klocktorn, sluten klockstapel",
 		"MONASTERY_RUSTIC_TOWER_C": "Rustikt klocktorn, klockstapel i trä",
@@ -97,17 +97,17 @@
 		"MONASTERY_RUSTIC_DOOR_A": "Rustic Gate, ödmjuk",
 		"MONASTERY_RUSTIC_DOOR_B": "Rustik grind, upphöjd",
 		"MONASTERY_RUSTIC_DOOR_C": "Rustik grind, mindre",
-		"MONASTERY_RUSTIC_DOOR_D": "Rustic Gate, Major",
+		"MONASTERY_RUSTIC_DOOR_D": "Rustik port, större",
 		"MONASTERY_RUSTIC_FRONTAGE": "Rustik fasad",
-		"MONASTERY_MODEST_CORE_A": "Enkel sal, stor",
-		"MONASTERY_MODEST_ROOM_A": "Enkel sal, liten",
+		"MONASTERY_MODEST_CORE_A": "Enkel sal, större",
+		"MONASTERY_MODEST_ROOM_A": "Enkel sal, mindre",
 		"MONASTERY_MODEST_ROOM_B": "Modest galleri",
 		"MONASTERY_MODEST_ROOM_C": "Blygsam passage",
-		"MONASTERY_MODEST_TOWER_A": "Modest Klocktornet, Major",
+		"MONASTERY_MODEST_TOWER_A": "Modest klocktorn, större",
 		"MONASTERY_MODEST_TOWER_B": "Blygsamt klocktorn, öppen klockstapel",
 		"MONASTERY_MODEST_TOWER_C": "Blygsamt klocktorn, sluten klockstapel",
-		"MONASTERY_MODEST_DOOR_A": "Modest Gate, Major",
-		"MONASTERY_MODEST_DOOR_B": "Modest Gate, Moll",
+		"MONASTERY_MODEST_DOOR_A": "Enkel port, större",
+		"MONASTERY_MODEST_DOOR_B": "Modest grind, mindre",
 		"MONASTERY_MODEST_FACADE_A": "Blygsam fasad",
 		"MONASTERY_MODEST_BUTTRESS_B": "Modest Buttress, stående",
 		"MONASTERY_MODEST_BUTTRESS_A": "Enkel strävpelare, murad",
@@ -130,8 +130,8 @@
 		"MONAS_MODEST_WALL_01_A": "Elegant balustrad",
 		"MONAS_MODEST_WALL_COLUMN_01_A": "Elegant inlägg",
 		"MONAS_MODEST_WALL_FOUNTAIN_01_A": "Polerad bassäng",
-		"MONAS_MODEST_WALL_FOUNTAIN_02_A": "Stort teckensnitt",
-		"MONAS_MODEST_WALL_FOUNTAIN_03_A": "Litet teckensnitt",
+		"MONAS_MODEST_WALL_FOUNTAIN_02_A": "Stor dopfunt",
+		"MONAS_MODEST_WALL_FOUNTAIN_03_A": "Liten dopfunt",
 		"MONAS_ABBA_CROSS_01_A": "Gyllene korset",
 		"MONAS_ABBA_CROSS_02_A": "Marmorkorset",
 		"MONAS_ABBA_VITRAIL_01_A": "Om fred och kärlek, glasmålning",
@@ -153,8 +153,8 @@
 		"ROMAN_CHURCH_FRONTAGE_C": "Romansk fasad, enkel klocka",
 		"ROMAN_CHURCH_TOWER_A": "Romanskt torn, balkong",
 		"ROMAN_CHURCH_TOWER_B": "Romanskt torn, Lancet",
-		"ROMAN_CHURCH_DOOR_A": "Romanesque Gate, Humble",
-		"ROMAN_CHURCH_DOOR_B": "Romansk port, Major",
+		"ROMAN_CHURCH_DOOR_A": "Romansk port, enkel",
+		"ROMAN_CHURCH_DOOR_B": "Romansk port, större",
 		"ROMAN_CHURCH_DOOR_C": "Romansk port, mindre",
 		"ROMAN_CHURCH_FRONTAGE_DECO_A": "Romansk fasad Fönster, runt",
 		"ROMAN_CHURCH_FRONTAGE_DECO_B": "Fönster med romansk fasad, lansett",
@@ -167,7 +167,7 @@
 		"LEGACY_RUSTIC_CHURCH_CORE_A": "Legacy Rustik långhus, tälttak",
 		"LEGACY_RUSTIC_CHURCH_CORE_B": "Rustikt långhus, lansettfönster",
 		"LEGACY_RUSTIC_CHURCH_CORE_C": "Rustikt långhus, sadeltak",
-		"LEGACY_RUSTIC_CHURCH_DOOR_A": "Legacy Rustic Gate, Humble",
+		"LEGACY_RUSTIC_CHURCH_DOOR_A": "Föråldrad rustik port, enkel",
 		"LEGACY_RUSTIC_CHURCH_DOOR_B": "Legacy Rustic Gate, vinklat tak",
 		"LEGACY_RUSTIC_CHURCH_DOOR_C": "Legacy Rustic Gate, välvt tak",
 		"LEGACY_RUSTIC_CHURCH_DOOR_D": "Äldre rustik port, stagat tak",
@@ -182,8 +182,8 @@
 		"ABBATIAL_EXTENSION_C": "Abbatialkapell",
 		"CASTLE_RUSTIC_STONE_TOWER@~2023-08-28 23:23:57": "Vakttorn i rustik sten",
 		"CASTLE_RUSTIC_WOOD_TOWER@~2023-08-28 23:23:59": "Vakttorn i rustikt trä",
-		"KEEP_EXTENSION_E@~2023-08-28 23:24:02": "Rustika befästa kvarter, Minor",
-		"KEEP_EXTENSION_F@~2023-08-28 23:24:05": "Rustika befästa kvarter, Major",
+		"KEEP_EXTENSION_E@~2023-08-28 23:24:02": "Rustika befästa kvarter, mindre",
+		"KEEP_EXTENSION_F@~2023-08-28 23:24:05": "Rustika befästa kvarter, större",
 		"CASTLE_RUSTIC_TOWER_ROOF_A@~2023-08-28 23:24:09": "Rustikt vakttornstak, sluttande",
 		"CASTLE_RUSTIC_TOWER_ROOF_B@~2023-08-28 23:24:11": "Rustikt vakttornstak, spetsigt",
 		"RUSTIC_CASTLE_MACHICOLATION_A@~2023-09-15 19:34:36": "Rustikt galler, enkelt",
@@ -251,8 +251,8 @@
 		"CASTLE_RUSTIC_DECO_PIKE_C@~2024-03-25 21:28:37": "Menacing Stakes, buntade",
 		"CASTLE_RUSTIC_DECO_PIKE@~2024-05-15 14:29:19": "Hotfulla pålar",
 		"CASTLE_MODEST_BRAZERO_C@~2024-06-11 18:27:41": "Järnbrasa Pelare",
-		"CASTLE_MODEST_BRAZERO_D@~2024-06-11 18:27:46": "Sten Brazier Pelare, Mindre",
-		"CASTLE_MODEST_BRAZERO_E@~2024-06-11 18:27:54": "Sten Brazier Pelare, Major",
+		"CASTLE_MODEST_BRAZERO_D@~2024-06-11 18:27:46": "Fyrfatspelare i sten, mindre",
+		"CASTLE_MODEST_BRAZERO_E@~2024-06-11 18:27:54": "Fyrfatspelare i sten, större",
 		"STONEMASON_STORAGE_07@~2024-07-24 21:11:06": "Stenrack",
 		"STONEMASON_STORAGE_08@~2024-07-24 21:10:42": "Stenvagn",
 		"STONEMASON_STORAGE_09@~2024-07-24 21:11:15": "Stenlådor",
@@ -265,10 +265,10 @@
 		"WHEAT_FARM_HAYCHARIOT_1@~2024-07-29 16:49:36": "Vetevagn",
 		"WHEAT_FARM_HAYSTACK_1@~2024-07-03 18:44:26": "Sparsam höstack",
 		"WHEAT_FARM_HAYSTACK_2@~2024-07-03 18:44:21": "Hjärtlig höstack",
-		"WHEAT_FARM_HAYSTACK_3@~2024-07-03 18:44:16": "Höstacken Bountiful",
-		"WHEAT_FARM_SCARECROW_1@2025-01-14 22:58:01": "Vigilant fågelskrämma",
-		"WHEAT_FARM_BARN_1@~2024-07-22 20:33:15": "Vete ladugård",
-		"WHEAT_FARM_EXTENSION_1@~2024-07-29 16:51:44": "Verktygshytt",
+		"WHEAT_FARM_HAYSTACK_3@~2024-07-03 18:44:16": "Generös höstack",
+		"WHEAT_FARM_SCARECROW_1@2025-01-14 22:58:01": "Vaksam fågelskrämma",
+		"WHEAT_FARM_BARN_1@~2024-07-22 20:33:15": "Ladugård för vete",
+		"WHEAT_FARM_EXTENSION_1@~2024-07-29 16:51:44": "Verktygsskjul",
 		"VINEYARD_STORAGE_1@~2024-12-17 17:35:46": "Vingårdsskjul",
 		"VINEYARD_WORKER_1@~2024-12-17 17:41:45": "Alkove för vila",
 		"CASTLE_DECO_CLOTHESLINE_01@~2024-12-12 22:02:27": "Krigsliknande klädstreck",
@@ -327,7 +327,7 @@
 		"UNDER_STUDY": "För närvarande under utredning.",
 		"MONASTERY_DESC@2025-01-14 22:58:01": "Religiöst komplex av byggnader för munkar och nunnor, inklusive sovsalar, gemensamma utrymmen och arbetsplatser.",
 		"WILL_ATTRACT_VISITORS_X": "Kommer att attrahera {IMG1}",
-		"DESC_PUBLIC_LOUNGE": "Krävs för att välkomna gäster till tavernan.",
+		"DESC_PUBLIC_LOUNGE": "Krävs för att välkomna gäster till värdshuset.",
 		"REFECTORY_DESC": "En plats där munkar och nunnor kan konsumera {1}.",
 		"ABBATIAL_CHURCH_DESC": "En imponerande klosterkyrka som är tillägnad tron.",
 		"MONASTERY_CHAPEL_DESC": "Ge tro till munkar, nunnor och bybor.",
