--- a/Foundation/sv/general.release.json
+++ b/Foundation/sv/general.release.json
@@ -54,7 +54,7 @@
 		"BUILDINGS_TAXES_FLOUR": "Väderkvarnar",
 		"BUILDINGS_TAXES_SMITHING@2025-01-14 22:58:01": "Smeder och vapentillverkare",
 		"BUILDINGS_TAXES_MARKET": "Marknadsbodar",
-		"BUILDINGS_TAXES_DRINKING": "Krogar",
+		"BUILDINGS_TAXES_DRINKING": "Värdshus",
 		"BUILDINGS_TAXES_CHURCH": "Kyrkor"
 	},
 	"BUDGET": {
@@ -179,7 +179,7 @@
 		"BAD_WEATHER_END_WAIT_DESC": "Det dåliga vädret har försvunnit...för tillfället.",
 		"BAD_WEATHER_WARNING_WAIT_DESC": "De lärde tror att dåligt väder är på väg att drabba vår by.",
 		"EVENT_LABOURBREWER_OPPORTUNITY_WAIT": "Byborna har ett erbjudande",
-		"EVENT_LABOURBREWER_OPPORTUNITY_WAIT_DESC": "En grupp bybor har en möjlighet för din taverna.",
+		"EVENT_LABOURBREWER_OPPORTUNITY_WAIT_DESC": "En grupp bybor har en möjlighet för ditt värdshus.",
 		"EVENT_KINGDOMHOSTING_OPPORTUNITY_WAIT@~2023-01-01 01:01:01": "Den förste konstapelns härold har en begäran",
 		"EVENT_KINGDOMHOSTING_OPPORTUNITY_WAIT_DESC@~2023-01-01 01:01:01": "Härolden har en begäran från förste konstapeln!",
 		"EVENT_ASPIRATION_MONASTERY_OPPORTUNITY_ABBESS_EVENT_WAIT@~2023-01-01 01:01:01": "Abbedissan har ett krav",
@@ -204,7 +204,7 @@
 		"COMFORTQUARTERS@2025-01-20 19:06:54": "Kvartal Bostäder",
 		"COMFORTBARRACKSGUEST@~2023-07-21 11:46:21": "Barracks logi",
 		"COMFORTQUARTERSGUEST@~2023-07-21 11:46:28": "Quarters logi",
-		"COMFORTTAVERNGUEST@~2024-12-18 21:33:02": "Värdshus Logi",
+		"COMFORTTAVERNGUEST@~2024-12-18 21:33:02": "Värdshuslogi",
 		"VISITABBATIAL@~2023-07-28 13:35:11": "Besök en abbatialkyrka",
 		"VISITKITCHEN@~2023-07-28 13:35:18": "Besök ett klosterkök",
 		"VISITSCRIPTORIUM@~2023-07-28 13:35:29": "Besök ett scriptorium",
@@ -220,7 +220,7 @@
 		"GOODS_DESC": "Måste köpa varor från en marknad för att täcka grundläggande behov.",
 		"LUXURY_DESC": "Måste köpa lyxiga varor på en marknad för att känna sig extravagant.",
 		"LUXURY_FOOD_DESC": "Måste köpa och konsumera en mängd olika livsmedel från en marknad för att känna sig mätt.",
-		"ENTERTAINMENT_DESC@2025-01-14 22:58:01": "Måste ha en bra tid på en krog för att varva ner.",
+		"ENTERTAINMENT_DESC@2025-01-14 22:58:01": "Måste ha en bra tid på en värdshus för att varva ner.",
 		"VISITWINERY_DESC": "Måste besöka en vingård för att se vinframställningsprocessen.",
 		"VISITVINEYARD_DESC": "Måste besöka en vingård för att se hur vinrankorna sköts.",
 		"VISITBUILDER_DESC@2025-01-14 22:58:01": "Måste besöka en byggnadsverkstad för att lära sig hur man tillverkar saker.",
@@ -246,8 +246,8 @@
 		"STEWARD": "Förvaltare av biskopen",
 		"ABBESS_ENVOY": "Abbedissans delegat",
 		"WANDERING_MONK": "Vandrande munk",
-		"REVELER@2025-01-14 22:58:01": "Reveller",
-		"REVELERS@2025-01-14 22:58:01": "Revellers",
+		"REVELER@2025-01-14 22:58:01": "Festglad",
+		"REVELERS@2025-01-14 22:58:01": "Festglada",
 		"GUEST": "Gäst",
 		"GUESTS": "Gäster",
 		"VISITING_SERF": "Besökande livegen",
