--- a/Foundation/sv/help.release.json
+++ b/Foundation/sv/help.release.json
@@ -10,7 +10,7 @@
 	"HELP_TOPICS_TITLES": {
 		"HELP_RESOURCES_MARKETS_TITLE": "Marknader",
 		"HELP_RESOURCES_ATTENDANCES_TITLE": "Närvarotillfällen",
-		"HELP_RESOURCES_TAVERNMEAL_TITLE": "Måltid på krogen",
+		"HELP_RESOURCES_TAVERNMEAL_TITLE": "Måltid på värdshus",
 		"HELP_RESOURCES_SCULPTURESTAINEDGLASS_TITLE": "Skulpturer och glasmålningar",
 		"HELP_VILLAGERS_PROMOTION_TITLE": "Befordran",
 		"HELP_HOUSING_HOUSINGQUALITY_TITLE": "Bostadskvalitet",
@@ -18,7 +18,7 @@
 		"HELP_HOUSING_BEAUTIFICATION_TITLE": "Försköning",
 		"HELP_HOUSING_UNDESIRABLENEIGHBORHOOD_TITLE@2025-01-27 18:38:51": "Oönskade grannskap",
 		"HELP_HOUSING_PAVEDROAD_TITLE": "Asfalterade vägar",
-		"HELP_EDICTSPRIVILEGES_SLOTS_TITLE@2025-01-27 18:38:51": "Edict & Privilege Slots",
+		"HELP_EDICTSPRIVILEGES_SLOTS_TITLE@2025-01-27 18:38:51": "Platser för förordnanden och privilegier",
 		"HELP_EDICTSPRIVILEGES_EFFECTS_TITLE": "Effects of Edicts & Privileges",
 		"HELP_EDICTSPRIVILEGES_CHANGING_TITLE": "Ändring av förordnanden och privilegier",
 		"HELP_LABORER_ADDITIONALTAXATION_TITLE": "Ytterligare skatter",
@@ -47,11 +47,11 @@
 		"HELP_GAMERULES_PRESETS_TITLE": "Förinställningar",
 		"HELP_GAMERULES_RULES_TITLE": "Regler",
 		"HELP_GETTINGSTARTED_FIRSTWATCHPOST_TITLE": "Din första utkikspost",
-		"HELP_GETTINGSTARTED_FIRSTTAVERN_TITLE": "Din första krog",
+		"HELP_GETTINGSTARTED_FIRSTTAVERN_TITLE": "Ditt första värdshus",
 		"HELP_GETTINGSTARTED_FIRSTMONASTERY_TITLE": "Ditt första kloster",
 		"HELP_GETTINGSTARTED_FIRSTCOMPANY_TITLE": "Ditt första kompani",
 		"HELP_GETTINGSTARTED_FIRSTMANDATES_TITLE@2025-01-27 18:38:51": "Ditt första uppdrag",
-		"HELP_GETTINGSTARTED_FIRSTFORTIFICATION_TITLE@~2025-01-11 23:58:57": "Providing Fortification",
+		"HELP_GETTINGSTARTED_FIRSTFORTIFICATION_TITLE@~2025-01-11 23:58:57": "Tillhandahåll befästning",
 		"HELP_GETTINGSTARTED_FIRSTDECORATION_TITLE@2025-01-27 18:38:51": "Din första dekoration",
 		"HELP_GETTINGSTARTED_INCREASINGPROSPERITY_TITLE": "Ökat välstånd",
 		"HELP_GETTINGSTARTED_HOSTINGGUESTS_TITLE": "Ta emot gäster",
@@ -71,8 +71,8 @@
 		"HELP_RESOURCES_ATTENDANCES_TEXT_4@~2025-01-07 00:04:11": "**Lodging**: Serverar ett begränsat antal resenärer samtidigt, beroende på vilka värdar som arbetar där.",
 		"HELP_RESOURCES_ATTENDANCES_TEXT_5@2025-01-27 18:38:51": "**Healing House**: Kan läka ett begränsat antal kombattanter samtidigt, beroende på vilka kirurger som tilldelats.",
 		"HELP_RESOURCES_ATTENDANCES_TEXT_6@2025-01-27 18:38:51": "Byggnadens **storlek** påverkar **antalet** **bybor** som kan arbeta i den.",
-		"HELP_RESOURCES_TAVERNMEAL_TEXT_1@2025-01-27 18:38:51": "**Tavern Meals** som skapas i **Tavern Kitchen** ger en tillfällig **Happiness**-bonus när de **konsumeras**.",
-		"HELP_RESOURCES_TAVERNMEAL_TEXT_2@2025-01-27 18:38:51": "Dessa resurser kräver ingen ytterligare lagring eller distribution - varje bybo som **besöker** en **Taverna** för att uppfylla sina **underhållningsbehov** kommer **automatiskt att konsumera** dem från **Tavernas kök**.",
+		"HELP_RESOURCES_TAVERNMEAL_TEXT_1@2025-01-27 18:38:51": "**Värdshusmåltider** som skapas i **Värdshuskök** ger en tillfällig **Lycka**-bonus när de **konsumeras**.",
+		"HELP_RESOURCES_TAVERNMEAL_TEXT_2@2025-01-27 18:38:51": "Dessa resurser kräver ingen ytterligare lagring eller distribution - varje bybo som **besöker** ett **värdshus** för att uppfylla sina **underhållningsbehov** kommer **automatiskt att konsumera** dem från **värdshusköket**.",
 		"HELP_RESOURCES_SCULPTURESTAINEDGLASS_TEXT_1@~2025-01-07 00:05:43": "Vissa byggnader kan kräva **skulpturer** eller **glasmålningar** som en del av sina **resurser**.",
 		"HELP_RESOURCES_SCULPTURESTAINEDGLASS_TEXT_2@~2025-01-07 00:06:00": "Dessa **projekt** måste först produceras på **dedikerade arbetsplatser** med hjälp av deras **listade resurser** innan de transporteras till byggarbetsplatserna.",
 		"HELP_RESOURCES_SCULPTURESTAINEDGLASS_TEXT_3@2025-01-27 18:38:51": "Efter att ha låsts upp i **Progression Screen** kan både **Sculpture Workshop** och **Stained Glass Workshop** byggas i **Builder's Workshop**.",
@@ -126,13 +126,13 @@
 		"HELP_LABORER_ADDITIONALTAXATION_TEXT_2@~2025-01-07 00:55:05": "**Mjölningsskatter**: Beskattar produktionen av mjöl.",
 		"HELP_LABORER_ADDITIONALTAXATION_TEXT_3@~2025-01-07 00:55:08": "**Skatter på gruvdrift**: Beskatta utvinning av mineraler.",
 		"HELP_LABORER_ADDITIONALTAXATION_TEXT_4@~2025-01-07 00:55:11": "**Skatter på smide**: Beskattar tillverkningen av verktyg och vapen.",
-		"HELP_LABORER_ADDITIONALTAXATION_TEXT_5@~2025-01-07 00:55:15": "**Skatter på dryck**: Beskatta konsumtionen av drycker på Tavern.",
+		"HELP_LABORER_ADDITIONALTAXATION_TEXT_5@~2025-01-07 00:55:15": "**Skatter på dryck**: Beskatta konsumtionen av drycker på värdshus.",
 		"HELP_LABORER_ADDITIONALTAXATION_TEXT_6@~2025-01-07 00:55:18": "**Tithe Taxes**: Skattetjänster i kyrkor och kapell.",
 		"HELP_LABORER_ADDITIONALTAXATION_TEXT_7@~2025-01-07 02:10:51": "Dessa ytterligare skatter kan **låsas upp** genom **Progression Screen** eller erhållas via **Privilegies**.",
-		"HELP_LABORER_TAVERN_TEXT_1@2025-01-27 18:38:51": "Byborna kan uppfylla sina **underhållningsbehov** genom att besöka **tavernan**.",
-		"HELP_LABORER_TAVERN_TEXT_2@~2025-01-07 00:55:52": "De kommer bara att göra det om **Berry Brew**, **Beer** eller **Wine** är **förvarade** där. Detta kräver att en **Taverner** tilldelas **servicedisken**.",
-		"HELP_LABORER_TAVERN_TEXT_3@~2025-01-07 00:56:08": "Förutom att tillhandahålla nödvändiga resurser ska du se till att din **Public Lounge** har **tillräckligt med utrymme** för att **tillgodose** alla **besökare**.",
-		"HELP_LABORER_LODGING_TEXT_1@~2025-01-07 00:56:22": "**Tavern** kan utökas med ett **Inn Lodging**, så att du kan **hosta** trötta **resenärer** från hela riket.",
+		"HELP_LABORER_TAVERN_TEXT_1@2025-01-27 18:38:51": "Byborna kan uppfylla sina **underhållningsbehov** genom att besöka **värdshuset**.",
+		"HELP_LABORER_TAVERN_TEXT_2@~2025-01-07 00:55:52": "De kommer bara att göra det om **Bärbrygd**, **Öl** eller **Vin** är **lagrade** där. Detta kräver att en **värdshusvärd** tilldelas **servicedisken**.",
+		"HELP_LABORER_TAVERN_TEXT_3@~2025-01-07 00:56:08": "Förutom att tillhandahålla nödvändiga resurser ska du se till att din **offentliga lokal** har **tillräckligt med utrymme** för att **tillgodose** alla **besökare**.",
+		"HELP_LABORER_LODGING_TEXT_1@~2025-01-07 00:56:22": "**Värdshus** kan utökas med ett **värdshuslogi**, så att du kan **härbärga** trötta **resenärer** från hela riket.",
 		"HELP_LABORER_LODGING_TEXT_2@2025-01-27 18:38:51": "När ditt **Inn Lodging** är **funktionellt** kommer din **första resenär** att anlända. Om du **tillåter** dem att **sprida ordet** om din by, kommer **fler resenärer** att göra ett **besök**.",
 		"HELP_LABORER_LODGING_TEXT_3@~2025-01-13 16:32:00": "Du kan **tjäna** en rimlig summa **mynt** för varje resenär genom att uppfylla **alla** deras **behov**. Men **resenärer med dålig service** kan **gå utan att betala**.",
 		"HELP_KINGDOM_COMPANIES_TEXT_1@2025-01-27 18:38:51": "För att **rekrytera** kombattanter måste du bilda **kompanier** vid **Castle Keep** eller via **Encampments**.",
@@ -203,9 +203,9 @@
 		"HELP_CLERGY_PILGRIMS_TEXT_2@~2025-01-07 01:21:02": "De kommer att börja **besöka** ditt kloster när du har ett **fungerande Hospitium** och har välkomnat din första **vandrande munk**.",
 		"HELP_CLERGY_PILGRIMS_TEXT_3@2025-01-27 18:38:51": "Du kan **assistera pilgrimer** genom att erbjuda dem skydd på ditt **Hospitium** och **förse** dem med förnödenheter inför deras resa.",
 		"HELP_CLERGY_PILGRIMS_TEXT_4@~2025-01-07 01:21:36": "I gengäld kan pilgrimerna lämna **donationer** av **värdefulla resurser**, såsom **manuskript**, **mynt**, **ljus** och olika typer av **mat**.",
-		"HELP_EXPANDING_IMPROVING_TEXT_1@2025-01-27 18:38:51": "Du kan **höja** **produktiviteten** på olika **arbetsplatser**, till exempel **Lumber Camp** och **Wheat Farm**, genom att göra följande **förbättringar**:",
+		"HELP_EXPANDING_IMPROVING_TEXT_1@2025-01-27 18:38:51": "Du kan **höja** **produktiviteten** på olika **arbetsplatser**, till exempel **Timmerläger** och **Vetegård**, genom att göra följande **förbättringar**:",
 		"HELP_EXPANDING_IMPROVING_TEXT_2@~2025-01-07 01:22:05": "**Lägg till arbetsplats**: Gör det möjligt för fler bybor att arbeta på samma arbetsplats.",
-		"HELP_EXPANDING_IMPROVING_TEXT_3@~2025-01-07 01:22:09": "**Lägg till lagring av utdata**: Utökar kapaciteten för lagring av producerade resurser på arbetsplatsen.",
+		"HELP_EXPANDING_IMPROVING_TEXT_3@~2025-01-07 01:22:09": "**Lägg till utgångslagring**: Utökar kapaciteten för lagring av producerade resurser på arbetsplatsen.",
 		"HELP_EXPANDING_IMPROVING_TEXT_4@~2025-01-07 01:22:26": "**Förbättra arbetsplatser** är ett kostnadseffektivt sätt att spara **mynt** och **utrymme**, eftersom förbättringsdelar i allmänhet är **mindre** och **billigare** än de ursprungliga byggnadsdelarna.",
 		"HELP_EXPANDING_NEWTERRITORY_TEXT_1@~2025-01-07 01:22:46": "För att **få tillgång till avlägsna resurser** eller skapa **mer utrymme** för att hysa bybor, måste du **köpa** ytterligare **Territorier**.",
 		"HELP_EXPANDING_NEWTERRITORY_TEXT_2@2025-01-27 18:38:51": "Detta gör du genom att klicka på knappen **Territory** i **Action Module** längst ned i mitten av skärmen.",
@@ -257,8 +257,8 @@
 		"HELP_GETTINGSTARTED_FIRSTWATCHPOST_TEXT_1@~2025-01-12 00:17:52": "*med *Watchposts** kan du tilldela byborna jobben som **Patroller** och **Watchmen**, för att ge **Safety** och **Fortification** till din by.",
 		"HELP_GETTINGSTARTED_FIRSTWATCHPOST_TEXT_2@~2025-01-12 00:16:18": "**Väktare** besöker **Vakttorn** och **Vaktplatser** för att tillhandahålla **Fortifikation**.",
 		"HELP_GETTINGSTARTED_FIRSTWATCHPOST_TEXT_3@~2025-01-12 00:16:01": "**Patrullerare** patrullerar i **zoner** som är markerade för patrullering, för att ge **säkerhet** till omgivande **hus**.",
-		"HELP_GETTINGSTARTED_FIRSTTAVERN_TEXT_1@2025-01-30 23:32:11": "Tavernor erbjuder **Underhållning** till bybor som har **Underhållningsbehov**. De kan också hysa **Besökare**.",
-		"HELP_GETTINGSTARTED_FIRSTTAVERN_TEXT_2@~2025-01-07 01:37:45": "En **servicedisk** och en **publik lounge** krävs för att välkomna **bybor**, men du måste förse dem med drycker, t.ex. **Berry Brew**, **Beer** eller **Wine**.",
+		"HELP_GETTINGSTARTED_FIRSTTAVERN_TEXT_1@2025-01-30 23:32:11": "Värdshus erbjuder **Underhållning** till bybor som har **Underhållningsbehov**. De kan också hysa **Besökare**.",
+		"HELP_GETTINGSTARTED_FIRSTTAVERN_TEXT_2@~2025-01-07 01:37:45": "En **servicedisk** och en **offentlig lokal** krävs för att välkomna **bybor**, men du måste förse dem med drycker, t. ex. **Bärbrygd**, **Öl** eller **Vin**.",
 		"HELP_GETTINGSTARTED_FIRSTMONASTERY_TEXT_1@~2025-01-11 23:44:16": "**Monasteries** är monument som fungerar annorlunda än andra, eftersom de **automatiskt** skickar sina **Monastics** mellan sina olika **arbetsplatser**.",
 		"HELP_GETTINGSTARTED_FIRSTMONASTERY_TEXT_2@~2025-01-07 01:38:24": "Att etablera ett **kloster**:",
 		"HELP_GETTINGSTARTED_FIRSTMONASTERY_TEXT_3@~2025-01-07 01:38:28": "Bygg en **Dormitory** för att hysa munkar eller nunnor.",
