--- a/Foundation/sv/unlockables.release.json
+++ b/Foundation/sv/unlockables.release.json
@@ -1,6 +1,6 @@
 ﻿{
 	"UNLOCKABLES": {
-		"TAVERN_ADDITIONAL_PARTS": "Tavern Refined Architecture",
+		"TAVERN_ADDITIONAL_PARTS": "Raffinerad arkitektur för värdshus",
 		"MONASTERY_STONE_SET": "Monastisk stenarkitektur",
 		"CHURCH_ADDITIONAL_RUSTIC_PARTS": "Rustik kyrkoarkitektur",
 		"WINE_PRODUCTION_SET": "Monastisk vinframställning",
@@ -62,25 +62,25 @@
 		"UNLOCKABLE_BOW_2_DESC@2025-01-14 22:58:01": "Låser upp tillverkningen av Recurve Bows i din Bowyer's Hut.",
 		"UNLOCKABLE_SWORD_2_DESC@2025-01-14 22:58:01": "Låser upp tillverkningen av stålsvärd hos din svärdssmed.",
 		"UNLOCKABLE_MARKET_GOODS_DESC@2025-01-14 22:58:01": "Låser upp varumarknaden, där du kan sälja varor till dina bybor.",
-		"UNLOCKABLE_TAVERN_DESC@2025-01-14 22:58:01": "Låser upp Tavernan, som låter dina bybor uppfylla sina underhållningsbehov genom att förbruka resurser.",
+		"UNLOCKABLE_TAVERN_DESC@2025-01-14 22:58:01": "Låser upp värdshus, som låter dina bybor uppfylla sina underhållningsbehov genom att förbruka resurser.",
 		"UNLOCKABLE_MANOR_STONE_DESC@~2024-10-24 20:28:29": "Låser upp City Parts för ditt Manor House.",
 		"UNLOCKABLE_MARKET_LUXURY_DESC@~2023-01-01 01:01:01": "Låser upp lyxmarknaden, där du kan sälja lyxresurser till dina bybor.",
-		"UNLOCKABLE_TAVERN_KITCHEN_DESC@2025-01-14 22:58:01": "Låser upp produktionen av Tavern Meals, som förbättrar lyckan hos de bybor som besöker Tavern.",
-		"UNLOCKABLE_TAVERN_STONE_DESC@~2024-12-17 01:40:54": "Låser upp ytterligare delar till din Tavern.",
+		"UNLOCKABLE_TAVERN_KITCHEN_DESC@2025-01-14 22:58:01": "Låser upp produktionen av värdshusmåltider, som förbättrar lyckan hos de bybor som besöker värdshuset.",
+		"UNLOCKABLE_TAVERN_STONE_DESC@~2024-12-17 01:40:54": "Låser upp ytterligare delar till ditt värdshus.",
 		"UNLOCKABLE_ADDITIONAL_TAXATION_DESC@~2023-01-01 01:01:01": "Låser upp ytterligare en skatt för din by.",
 		"UNLOCKABLE_TREASURY_MONASTERY_DESC@~2024-07-15 17:59:13": "Låser upp skattkammaren för ditt kloster.",
 		"UNLOCKABLE_TREASURY_CASTLE_DESC@~2024-07-15 17:59:08": "Låser upp skattkammaren för ditt slott.",
 		"X_PRIVILEGE_SLOT_CLERGY@~2024-07-15 18:15:49": "{1} prästerskapets privilegier",
 		"X_PRIVILEGE_SLOT_LABOR@2025-01-14 22:58:01": "{1} Arbetstagarprivilegier",
-		"X_PRIVILEGE_SLOT_KINGDOM@~2024-07-15 18:16:02": "{1} Kingdom Privilege",
-		"UNLOCKABLE_WHEATFARM_TECH_DESC@~2024-07-24 18:40:58": "Låser upp förbättringar för veteodlingen.",
+		"X_PRIVILEGE_SLOT_KINGDOM@~2024-07-15 18:16:02": "{1} Kungarikesprivilegie",
+		"UNLOCKABLE_WHEATFARM_TECH_DESC@~2024-07-24 18:40:58": "Låser upp förbättringar för vetegården.",
 		"UNLOCKABLE_STONEMASON_TECH_DESC@~2024-07-24 20:52:27": "Låser upp förbättringar för stenhuggarstugan.",
 		"UNLOCKABLE_STORAGE_TECH_DESC@~2024-07-25 15:00:21": "Låser upp förbättringar för spannmålsmagasinet och lagerlokalen.",
 		"UNLOCKABLE_PAVED_ROAD@~2024-09-25 18:47:24": "Asfalterade vägar",
 		"UNLOCKABLE_PAVED_ROAD_DESC@2025-01-14 22:58:01": "Låser upp Paviour's Yard för att uppgradera grusvägar till stenbelagda vägar.",
 		"UNLOCK_CITY_MARKET_DESC@~2024-12-11 17:11:41": "Låser upp marknadshallen för din City Market, som gör att du kan förse tätbefolkade områden med resurser.",
 		"UNLOCK_CITY_BELFRY_DESC@2025-01-14 22:58:01": "Låser upp det prestigefyllda City Belfry för City Market, som kan öka lyckan för bybor som bor i närheten.",
-		"UNLOCKABLE_TAVERN_LODGE_DESC@~2024-12-17 02:42:31": "Låser upp Inn Lodge för din Tavern, som låter resenärer vila i din by.",
+		"UNLOCKABLE_TAVERN_LODGE_DESC@~2024-12-17 02:42:31": "Låser upp värdshuslogi för ditt värdshus, som låter resenärer vila i din by.",
 		"CITY_FENCE@~2024-12-12 21:12:00": "Stadsstängsel",
 		"UNLOCKABLE_ENCAMPMENT_HQ_DESC@2025-01-14 23:02:04": "Låser upp kommandoposten för borgen och varje läger, vilket utökar deras kompanis storlek.",
 		"RUSTIC_CHURCH_SET@~2025-01-20 18:10:07": "Rustik kyrkoarkitektur",
