--- a/Foundation/sv/achievements.release.json
+++ b/Foundation/sv/achievements.release.json
@@ -47,7 +47,7 @@
 		"ACH_GREAT_HALL_SPLENDOR_100_NAME": "Den stora osten av Cheddarpalatset",
 		"ACH_GREAT_HALL_SPLENDOR_100_DESC@2025-01-14 22:58:01": "Bygg en Stor Hall med 100 Arbetarprakt",
 		"ACH_PRIVILEGE_TRADE_TAXATION_CHALLENGE_NAME@~2024-12-20 00:20:28": "Teloneum",
-		"ACH_PRIVILEGE_TRADE_TAXATION_CHALLENGE_DESC@2025-01-20 20:47:26": "Lagstifta om \"Merchandise Taxes\"-privilegiet (utmaningsregler eller svårare)",
+		"ACH_PRIVILEGE_TRADE_TAXATION_CHALLENGE_DESC@2025-01-20 20:47:26": "Lagstifta om \"Handelsskatter\"-privilegiet (utmaningsregler eller svårare)",
 		"ACH_VC_PRESTIGIOUS_BURG_NAME@~2024-12-17 01:14:10": "En av folket",
 		"ACH_VC_PRESTIGIOUS_BURG_DESC@2025-01-14 22:58:01": "Uppnå strävan: \"En framgångsrik stad\"",
 		"ACH_VC_PRESTIGIOUS_BURG_CHALLENGE_NAME@~2024-12-20 00:21:13": "Borgmästaren",
