--- a/Foundation/sv/buildings.release.json
+++ b/Foundation/sv/buildings.release.json
@@ -18,7 +18,7 @@
 		"MONASTERY_KITCHEN_GOLDENGRUEL@~2024-04-23 19:05:34": "Koka gyllene välling",
 		"MONASTERY_KITCHEN_ROBUSTROAST@~2024-04-23 19:05:39": "Tillaga Robust Roast",
 		"MONASTERY_KITCHEN_SIMPLESTEW@~2024-04-23 19:05:44": "Laga enkel gryta",
-		"TAVERN_LODGE@~2024-12-11 22:03:50": "Inn Lodge"
+		"TAVERN_LODGE@~2024-12-11 22:03:50": "Gästgiveri"
 	},
 	"BUILDING_PARTS": {
 		"PART_CHURCH_ARK": "Polerad stenbåge",
