--- a/Foundation/sv/general.release.json
+++ b/Foundation/sv/general.release.json
@@ -122,7 +122,7 @@
 		"SWORD_2@~2023-07-14 15:01:50": "Svärd av stål",
 		"SWORD_3@~2023-07-14 15:01:54": "Långsvärd",
 		"SPEAR_2@~2023-07-14 15:01:57": "Stavarm",
-		"SPEAR_3@~2023-07-14 15:02:00": "Pike",
+		"SPEAR_3@~2023-07-14 15:02:00": "Pik",
 		"BOW_2@~2023-11-03 17:39:11": "Recurvebåge",
 		"BOW_3@~2023-07-14 15:02:11": "Långbåge",
 		"STEEL@~2023-07-14 15:05:20": "Stål",
