--- a/Foundation/sv/help.release.json
+++ b/Foundation/sv/help.release.json
@@ -19,7 +19,7 @@
 		"HELP_HOUSING_UNDESIRABLENEIGHBORHOOD_TITLE@2025-01-27 18:38:51": "Oönskade grannskap",
 		"HELP_HOUSING_PAVEDROAD_TITLE": "Asfalterade vägar",
 		"HELP_EDICTSPRIVILEGES_SLOTS_TITLE@2025-01-27 18:38:51": "Platser för förordnanden och privilegier",
-		"HELP_EDICTSPRIVILEGES_EFFECTS_TITLE": "Effects of Edicts & Privileges",
+		"HELP_EDICTSPRIVILEGES_EFFECTS_TITLE": "Effekter av förordnanden och privilegier",
 		"HELP_EDICTSPRIVILEGES_CHANGING_TITLE": "Ändring av förordnanden och privilegier",
 		"HELP_LABORER_ADDITIONALTAXATION_TITLE": "Ytterligare skatter",
 		"HELP_LABORER_TAVERN_TITLE": "Värdshus",
@@ -40,10 +40,10 @@
 		"HELP_EXPANDING_NEWTERRITORY_TITLE": "Nytt territorie",
 		"HELP_EXPANDING_TRAVELDISTANCE_TITLE": "Reseavstånd",
 		"HELP_EXPANDING_NEWHUBS_TITLE": "Nya nav",
-		"HELP_OPPORTUNITIES_HOSTING_TITLE": "Hosting",
+		"HELP_OPPORTUNITIES_HOSTING_TITLE": "Stå värd",
 		"HELP_ASPIRATION_NEWGAME_TITLE@2025-01-27 18:38:51": "Ny spelsträvan",
 		"HELP_ASPIRATION_QUESTS_TITLE": "Strävansuppdrag",
-		"HELP_ASPIRATION_COMPLETION_TITLE": "Aspiration Completion",
+		"HELP_ASPIRATION_COMPLETION_TITLE": "Färdigställande av strävan",
 		"HELP_GAMERULES_PRESETS_TITLE": "Förinställningar",
 		"HELP_GAMERULES_RULES_TITLE": "Regler",
 		"HELP_GETTINGSTARTED_FIRSTWATCHPOST_TITLE": "Din första utkikspost",
@@ -96,7 +96,7 @@
 		"HELP_HOUSING_HOUSINGDENSITY_TEXT_5@~2025-01-07 00:13:14": "**Medelhög densitet**: Måste ligga inom lätt befästnings- och patrulltäckning.",
 		"HELP_HOUSING_HOUSINGDENSITY_TEXT_6@~2025-01-07 00:13:19": "**Hög densitet**: Måste ligga inom täckningsområdet för tung befästning och patrullering.",
 		"HELP_HOUSING_HOUSINGDENSITY_TEXT_7@~2025-01-07 00:13:32": "**Högre täthet** kräver **mer** av samma **resurser** för att byggas.",
-		"HELP_HOUSING_BEAUTIFICATION_TEXT_1@~2025-01-07 00:13:49": "**Housing** must be within a **Beautification area** to upgrade to **Medium-Quality** or **higher**.",
+		"HELP_HOUSING_BEAUTIFICATION_TEXT_1@~2025-01-07 00:13:49": "**Bostäder** måste vara inom ett **försköningsområde** för att uppgraderas till **mediumkvalitet** eller **högre**.",
 		"HELP_HOUSING_BEAUTIFICATION_TEXT_2@2025-01-27 18:38:51": "**Förskönande** områden skapas genom att man bygger **dekorativa delar** som inte är **bundna till någon fastighet**.",
 		"HELP_HOUSING_BEAUTIFICATION_TEXT_3@~2025-01-07 00:14:27": "**Genom att kombinera** olika **typer** av dekorationer - t.ex. träd, bänkar, buskar och fontäner - **utökas** täckningen** av ett Beautification-område.",
 		"HELP_HOUSING_BEAUTIFICATION_TEXT_4@~2025-01-07 00:14:36": "Du hittar dessa dekorativa delar i **Byggmenyn** under **Gemensamma dekorationer**.",
