--- a/Foundation/sv/buildings.release.json
+++ b/Foundation/sv/buildings.release.json
@@ -77,7 +77,7 @@
 		"PUBLIC_LOUNGE": "Allmän lounge",
 		"MONASTERY_STONE_DOOR_A": "Stenport, mindre",
 		"MONASTERY_STONE_DOOR_B": "Stenport, större",
-		"MONASTERY_STONE_DOOR_C": "Stone Gate, Service",
+		"MONASTERY_STONE_DOOR_C": "Stenport, tjänst",
 		"MONASTERY_STONE_TOWER_A": "Stentorn, mindre",
 		"MONASTERY_STONE_TOWER_B": "Stenvalv",
 		"MONSATERY_STONE_EXTENSION_A": "Stengalleri, större",
@@ -118,7 +118,7 @@
 		"MONAS_ABBA_BENCH_03_A": "Graciös bänk",
 		"MONAS_ABBA_FOUNTAIN_01_A": "Stora fontänen",
 		"MONAS_ABBA_MODEST_01_A": "Elegant fontän",
-		"MONAS_ABBA_VASE_01_A": "Abbatial Marble Stoup",
+		"MONAS_ABBA_VASE_01_A": "Abbatisk marmorfunt",
 		"MONAS_ABBA_WALL_FOUNTAIN_01_A": "Marmorbassäng",
 		"MONAS_MODEST_ALCOVE_01_A": "Blygsam stenhelgedom",
 		"MONAS_MODEST_ARCH_01_A": "Elegant stenbåge",
@@ -174,11 +174,11 @@
 		"LEGACY_RUSTIC_CHURCH_DOOR_E": "Legacy Rustic Gate, svängt tak",
 		"LEGACY_RUSTIC_CHURCH_DOOR_F": "Legacy Rustic Gate, sluttande tak",
 		"ABBATIAL_CORE_A": "Abbatialskepp",
-		"ABBATIAL_DOOR_A": "Abbatial Gate, Major",
-		"ABBATIAL_DOOR_B": "Abbatial Gate, Minor",
+		"ABBATIAL_DOOR_A": "Abbatisk port, större",
+		"ABBATIAL_DOOR_B": "Abbatisk port, mindre",
 		"ABBATIAL_BELL_TOWER_A": "Klocktornet i Abbatial",
-		"ABBATIAL_EXTENSION_A": "Abbatial Gallery, Major",
-		"ABBATIAL_EXTENSION_B": "Abbatial Gallery, Minor",
+		"ABBATIAL_EXTENSION_A": "Abbatiskt galleri, större",
+		"ABBATIAL_EXTENSION_B": "Abbatiskt galleri, mindre",
 		"ABBATIAL_EXTENSION_C": "Abbatialkapell",
 		"CASTLE_RUSTIC_STONE_TOWER@~2023-08-28 23:23:57": "Vakttorn i rustik sten",
 		"CASTLE_RUSTIC_WOOD_TOWER@~2023-08-28 23:23:59": "Vakttorn i rustikt trä",
@@ -214,10 +214,10 @@
 		"CASTLE_MODEST_TOWER_1@~2023-09-15 19:32:27": "Enkelt stentorn, fyrkantigt",
 		"CASTLE_MODEST_TOWER_2@~2023-09-15 19:32:31": "Anspråkslöst stentorn, cirkel",
 		"CASTLE_MODEST_TOWER_3@~2023-09-15 19:32:40": "Modest stentorn",
-		"CASTLE_WATCHTOWER_MODEST@2025-01-14 22:58:01": "Modest Castle Watchtower",
+		"CASTLE_WATCHTOWER_MODEST@2025-01-14 22:58:01": "Modest vakttorn för slott",
 		"CASTLE_WATCHTOWER_RUSTIC@2025-01-14 22:58:01": "Rustikt vakttorn för slott",
-		"KINGDOM_RUSTIC_GATEHOUSE@~2023-10-26 18:37:30": "Wood Castle Gatehouse",
-		"KINGDOM_MODEST_GATEHOUSE@~2023-10-26 18:37:55": "Stone Castle Gatehouse",
+		"KINGDOM_RUSTIC_GATEHOUSE@~2023-10-26 18:37:30": "Träslott - Portvaktsstuga",
+		"KINGDOM_MODEST_GATEHOUSE@~2023-10-26 18:37:55": "Stenslott - Portvaktsstuga",
 		"ENCAMPMENT_GROUND@~2023-11-01 19:59:57": "Lägerplats Mark",
 		"ENCAMPMENT_ARCHER_TRAINING_1@~2023-11-01 20:04:58": "Halm bågskytt mål",
 		"ENCAMPMENT_ARCHER_TRAINING_2@~2023-11-01 20:05:01": "Plankan Bågskytte Mål",
@@ -245,7 +245,7 @@
 		"CASTLE_RUSTIC_DECO_BUTTRESS_A@~2024-03-25 21:16:23": "Äldre sten Buttress",
 		"CASTLE_RUSTIC_DECO_BUTTRESS_B@~2024-03-25 21:03:03": "Rustik stensättning",
 		"CASTLE_RUSTIC_DECO_BUTTRESS_C@~2024-03-25 21:03:09": "Rustik Buttress i trä",
-		"CASTLE_RUSTIC_DECO_DOOR_A@~2024-03-25 21:20:46": "Aged Barricaded Passage",
+		"CASTLE_RUSTIC_DECO_DOOR_A@~2024-03-25 21:20:46": "Åldrad barrikaderad passage",
 		"CASTLE_RUSTIC_DECO_PIKE_A@~2024-03-25 21:28:11": "Hotfulla pålar, små",
 		"CASTLE_RUSTIC_DECO_PIKE_B@~2024-03-25 21:28:27": "Menacing Stakes, lång",
 		"CASTLE_RUSTIC_DECO_PIKE_C@~2024-03-25 21:28:37": "Menacing Stakes, buntade",
