--- a/Foundation/sv/general.release.json
+++ b/Foundation/sv/general.release.json
@@ -23,7 +23,7 @@
 		"CATEGORY_QUARRY_SING": "stenbrott",
 		"CATEGORY_QUARRY_PLUR": "stenbrott",
 		"CATEGORY_KEEP": "Behåll",
-		"CATEGORY_KEEP_SING": "keep",
+		"CATEGORY_KEEP_SING": "fortsätt",
 		"CATEGORY_KEEP_PLUR": "håller",
 		"CATEGORY_TRAINING": "Träning",
 		"CATEGORY_TRAINING_SING": "träning",
@@ -260,7 +260,7 @@
 		"VISITING_MONK": "Besökande munk",
 		"PILGRIMS@~2023-07-31 17:09:31": "Pilgrimer",
 		"ABBESS@~2023-12-05 18:16:11": "Abbedissa",
-		"HERALD@~2023-12-14 23:06:49": "Herald",
+		"HERALD@~2023-12-14 23:06:49": "Härold",
 		"ABBESS_RETINUE@~2024-01-09 21:23:14": "Abbedissans retinue",
 		"VISITING_PRIOR@~2024-01-10 18:52:40": "Besökande Prior",
 		"VISITING_PRIORESS@~2024-01-10 18:52:44": "Besökande priorinna",
@@ -360,7 +360,7 @@
 		"PURGE_MONASTERY_MANDATE_BTN@~2024-04-17 16:49:12": "Fördriva",
 		"PURGE_MONASTERY_MANDATE_BTN_TOOLTIP@~2024-04-17 16:49:43": "Utstötta klostermedlemmar lämnar byn.",
 		"BANISH_VILLAGER_MANDATE@~2025-01-06 19:43:53": "Utesluta arbetslösa bybor",
-		"BANISH_VILLAGER_MANDATE_BTN@~2025-01-06 19:43:49": "Oust",
+		"BANISH_VILLAGER_MANDATE_BTN@~2025-01-06 19:43:49": "Avlägsna",
 		"BANISH_VILLAGER_MANDATE_BTN_TOOLTIP@~2025-01-06 19:43:45": "Uteslutna bybor kommer att lämna byn."
 	},
 	"PROSPECTING": {
