--- a/Foundation/sv/help.release.json
+++ b/Foundation/sv/help.release.json
@@ -26,7 +26,7 @@
 		"HELP_LABORER_LODGING_TITLE": "Husrum",
 		"HELP_KINGDOM_COMPANIES_TITLE": "Militära kompanier",
 		"HELP_KINGDOM_QUARTERS_TITLE": "Militärkvarter",
-		"HELP_KINGDOM_FITTING_TITLE": "Fitting Companies",
+		"HELP_KINGDOM_FITTING_TITLE": "Utrustningskompanier",
 		"HELP_KINGDOM_MISSION_TITLE": "Militära uppdrag",
 		"HELP_KINGDOM_ROYALHOSTING_TITLE": "Kungliga kompanier",
 		"HELP_KINGDOM_DUTY_TITLE": "Kompaniplikt",
