--- a/Foundation/sv/events.release.json
+++ b/Foundation/sv/events.release.json
@@ -909,7 +909,7 @@
 		"ASPIRATION_MONASTERY_STEP_4_EVENT_CHOICE_TOOLTIP_FAILURE@~2024-01-10 18:44:15": "Abbessan är besviken.",
 		"ASPIRATION_MONASTERY_STEP_4_EVENT_FAILURE_TITLE@~2024-01-10 18:44:37": "Abbess besviken",
 		"ASPIRATION_MONASTERY_STEP_4_EVENT_FAILURE_DESC@~2024-01-10 18:44:58": "Abbessan är besviken över ert beslut. Det kommer att påverka hennes vistelse i klostret.",
-		"ASPIRATION_MONASTERY_STEP_4_EVENT_SUCCESS_TITLE@~2023-01-01 01:01:01": "Abbess Content",
+		"ASPIRATION_MONASTERY_STEP_4_EVENT_SUCCESS_TITLE@~2023-01-01 01:01:01": "Abbedissan är förnöjd",
 		"ASPIRATION_MONASTERY_STEP_4_EVENT_SUCCESS_DESC@2025-01-14 22:58:01": "Abbedissan är nöjd med den senaste händelseutvecklingen. Det här kommer att påverka hennes vistelse i ert kloster.",
 		"ASPIRATION_MONASTERY_STEP_4_EVENT_1_A_QUEST_DESC@2025-01-14 22:58:01": "Jag har lovat abbedissan att jag ska ta emot pilgrimer för en mässa i vårt kloster.",
 		"ASPIRATION_MONASTERY_STEP_4_EVENT_1_A_QUEST_OBJECTIVE@2025-01-14 22:58:01": "Ta emot pilgrimerna med 80% approval.",
@@ -1298,7 +1298,7 @@
 		"ASPIRATION_LABOR_STEP_4_SUCCESS_DESC": "Du byggde en storslagen stadsklocka och säkrade din stads rättmätiga överhöghet.",
 		"ASPIRATION_LABOR_HOSTING_FAILURE_TITLE": "Seneschal Hosting misslyckades",
 		"ASPIRATION_LABOR_HOSTING_FAILURE_DESC@~2024-12-18 19:46:57": "Seneschalen anser att er stad fortfarande behöver förfinas. Han väntar på att er fogde ska återvända när tiden är mogen.",
-		"ASPIRATION_LABOR_HOSTING_SUCCESS_TITLE@~2024-12-18 19:57:03": "Seneschal Hosting Succeeded",
+		"ASPIRATION_LABOR_HOSTING_SUCCESS_TITLE@~2024-12-18 19:57:03": "Stå värd för seneschalen lyckades",
 		"ASPIRATION_LABOR_HOSTING_SUCCESS_DESC@~2024-12-18 20:12:36": "Seneschalen hade en underbar tid i er stad! Han är imponerad av er gästfrihet och avreser med ett löfte om att se till att er stad får ett gynnsamt stöd i lagstiftningen.",
 		"ASPIRATION_LABOR_HOSTING_EVENT_FAILURE_DESC@2025-01-14 23:01:25": "Seneschal är något missnöjd med den senaste tidens händelser, vilket kommer att påverka hans slutliga åsikt om hans vistelse.",
 		"ASPIRATION_LABOR_HOSTING_EVENT_SUCCESS_DESC@2025-01-14 23:01:25": "Seneschal blir positivt överraskad av de senaste händelserna, som kommer att påverka hans slutliga åsikt om sin vistelse.",
